tests/test_input_files/good/test_good_if_stmt_4.punkt
main {
    if true {
        if true {
            if true {
                if true {
                    if true {
                        if true {
                            println false.
                        }
                    }
                }
            }
        }
    }
}
