tests/test_input_files/bad/test_bad_while_stmt_2.punkt
main {
	while true
		# missing loop body
}
